--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "htmlspecialchars": "^1.0.5",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
