--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "htmlspecialchars": "^1.0.5",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
